crates/uitest/fixtures/ty_check/own_place_view_arg_concrete_rejected.snap
---
source: crates/uitest/tests/ty_check.rs
assertion_line: 27
expression: diags
input_file: fixtures/ty_check/own_place_view_arg_concrete_rejected.fe
---
error[8-0072]: `own` argument requires an owned movable value
  ┌─ own_place_view_arg_concrete_rejected.fe:8:14
  │
8 │     take_own(foo)
  │              ^^^ this expression has `view Foo` capability and cannot be moved as owned here
  │
  = pass an owned place value, or change the callee parameter mode to borrow/view
